# Task/openapi.yaml
@@ -56,5 +56,40 @@ paths:
                                 required: []
                                 type: object
                                 properties: {}
+    /assignee-task:
+        get:
+            parameters:
+                - name: assigneeId
+                  in: query
+                  required: true
+                  schema:
+                      type: string
+            responses:
+                "200":
+                    description: successful query
+                    content:
+                        application/json:
+                            schema:
+                                required:
+                                    - taskId
+                                    - title
+                                    - description
+                                    - assigneeId
+                                    - status
+                                type: object
+                                properties:
+                                    taskId:
+                                        type: string
+                                    title:
+                                        type: string
+                                    description:
+                                        type: string
+                                    assigneeId:
+                                        type: string
+                                    status:
+                                        type: string
+                                        enum:
+                                            - open
+                                            - completed
 components:
     schemas: {}
